V3 refactoring — ServiceRequest/Response to OperationRequest/Response, simplified builders and definitions